- Fixed a bug where you could only use in the stack the first 10 registers
- Fixed a bug that prevented declaring structures in a structure
- Refactored CodeInterpreter to completely use PC
- Fixing wrong memory management (Big to Little endian)
- Added ASCII column in memory viewing table
- Fixed Stack address and Symbol address settings (enabled during simulation)


0.1.3 -> 0.1.4

- Fixed directives in BSS not being executed
- Enhanced CPSR/SPSR flag visibility
- Fixed memory search (GUI not updated when searched a address located on another page)
- Changed notifications format
- Added FlatPaks
- Added launching command ($jarmemu)
- Fixed char parsing error (deleting whitespaces)


0.1.2 -> 0.1.3

- ASR carry flag improved yet again (didn't work for positive values)
- Convert MOV instruction to SHIFT instruction (in the backend only) for better use of update flags
- Fixing a bug that prevented the leftest text of editor to be selected with mouse
- Fixing Regex parser arguments parsing (strip whitespaces)
- Two new themes (Nord & Cupertino) are now available
- Reworking data viewing (Registers, Stack, Memory)
- Adding dynamic settings
- Adding automatic breakpoints
- Fixing new file saving


0.1.1 -> 0.1.2

- Fixing character parsing
- Fixing unresponsive app bug due to inexistant save file
- Optimizing concurrent management (using bound properties instead of direct assignation)
- Fixing unrefreshed screen bug
- Adding global directive logic (actually usable now)
- Fixing the stack auto-scrolling for non-HDPI screens
- Adding Fill directive
- Adding AtlantaFx theme (instead of JavaFx Moderna with a bit of BootstrapFx)
- Adding support for Dark & Light themes
- Legacy Parser now works when selected in the drop down menu (its use is still not recommended nonetheless)
- RRX as an instruction is now fully supported
- S condition now update all flags on ROR instruction
- ASR carry flag should now work correctly
- Enhancing settings menu