@@ -46,3 +46,4 @@
 .medium-icon {
     -fx-icon-size: 32;
 }
+
